<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bluetooth_setting.BluetoothSettingActivity">

        <TextView
            android:id="@+id/tv_last_connected_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_connected_device"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="3L:4D:4R:5T:6Y"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_connected_device"/>

        <Button
            android:id="@+id/btn_new_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip"
            android:text="@string/add_new_device"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/red_light"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_20sdp"
            android:drawablePadding="@dimen/_10sdp"/>



        <EditText
            android:id="@+id/tv_mac_id"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:hint="@string/ip_mac_address"
            android:visibility="gone"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_new_add_device"/>

        <Button
            android:id="@+id/btn_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mac_id"
            android:text="@string/add"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/red_light"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_20sdp"
            android:drawablePadding="@dimen/_10sdp"/>

        <Button
            android:id="@+id/btn_test_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_device"
            android:text="@string/test_device"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/red_light"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_20sdp"
            android:drawablePadding="@dimen/_10sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>