<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/const_top"
        android:padding="@dimen/_5sdp"
        android:layout_marginBottom="1dp"
        android:background="@color/green"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_c_note_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:hint="@string/c_note_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tv_carton_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:hint="@string/carton_no"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:visibility="gone"
            android:hint="@string/status"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>
</layout>