<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintBottom_toBottomOf="parent">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="@dimen/_10sdp"
          android:orientation="vertical">

        <TextView
            android:id="@+id/title_one"
            android:text="@string/login"
            android:textSize="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:fontFamily="@font/kameron_bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/title_two"
            android:text="@string/enter_userid_password"
            android:textSize="@dimen/_12sdp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="center"
            android:fontFamily="@font/kameron_regular"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/title_one"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:hint="@string/user_name"
            app:layout_constraintTop_toBottomOf="@+id/title_two">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/username"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:inputType="textCapCharacters"
              android:gravity="start|center"
              android:textSize="@dimen/_12sdp"
              android:maxLength="15"
              android:textDirection="anyRtl"
              tools:text="MAXPACIFIC"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/password"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:inputType="textPassword"
              android:maxLength="15"
              android:textSize="@dimen/_12sdp"
              tools:text="12345678"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/red_light"
            android:textColor="@color/white"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>