<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvToday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintEnd_toStartOf="@+id/cvScheduled"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clToday"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calender_today"
                    app:tint="@color/blue"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/ic_background"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/clToday"
                    app:layout_constraintTop_toTopOf="@+id/clToday"/>

                <TextView
                    android:id="@+id/tvTodayCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivToday" />

                <TextView
                    android:id="@+id/tvToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/ivToday" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvScheduled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cvToday"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clScheduled"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivScheduled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_scheduled"
                    app:tint="@color/blue"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/ic_background"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/clScheduled"
                    app:layout_constraintTop_toTopOf="@+id/clScheduled"/>

                <TextView
                    android:id="@+id/tvScheduledCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivScheduled" />

                <TextView
                    android:id="@+id/tvScheduled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduled"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/ivScheduled" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintEnd_toStartOf="@+id/cvScheduled"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvToday">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_all"
                    app:tint="@color/blue"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/ic_background"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/clAll"
                    app:layout_constraintTop_toTopOf="@+id/clAll"/>

                <TextView
                    android:id="@+id/tvAllCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivAll" />

                <TextView
                    android:id="@+id/tvAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/ivAll" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cvAll"
            app:layout_constraintTop_toTopOf="@id/cvAll">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCompleted"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/completed"
                    app:tint="@color/blue"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/ic_background"
                    android:layout_margin="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/clCompleted"
                    app:layout_constraintTop_toTopOf="@+id/clCompleted"/>

                <TextView
                    android:id="@+id/tvCompletedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivCompleted" />

                <TextView
                    android:id="@+id/tvCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/ivCompleted" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>